--- a/jogo/templates/jogo/home.html
+++ b/jogo/templates/jogo/home.html
@@ -1,35 +1,77 @@
 {% extends 'base.html' %}
 {% block title %}Realmatismo Fc {% endblock %}
 {% block main %}
-     <div class="card bg-light">
-        <div class="card-header">Proxímos Jogos</div>
-              <div class="card-body">
-                {% if jogos.count > 0 %}
-
-                  <table class="table">
-                      <thead>
-                        <tr>
-                          <th scope="col">#</th>
-                          <th scope="col">Adversário</th>
-                          <th scope="col">Local</th>
-                          <th scope="col">Data</th>
-                        </tr>
-                      </thead>
-                      <tbody>
-                        {% for jogo in jogos %}
-                        <tr>
-                          <th scope="row">#</th>
-                            <td>{{ jogo.adversario }}</td>
-                            <td>{{ jogo.local }}</td>
-                            <td>{{ jogo.data }}</td>
-                        </tr>
+{% load static %}
+<div class="row">
+    <div class="col s12 m4">
+        <div class="card hoverable">
+            <div class="card-content">
+                <span class="card-title">Próximos Jogos</span>
+                    {% if proximos_jogos.count > 0 %}
+                        <ul class="collection" style="border: none">
+                        {% for jogo in proximos_jogos %}
+                            <li class="collection-item avatar">
+                              <img src="media/{{ jogo.adversario.escudo_adversario }}" alt="" class="circle">
+                              <span class="title">{{ jogo.adversario.nome }}</span>
+                              <p>{{ jogo.data }} <br>
+                              </p>
+                              <a href="{% url 'jogo' jogo.pk %}" class="secondary-content"><i class="material-icons">grade</i></a>
+                            </li>
                         {% endfor %}
-                      </tbody>
-                  </table>
-                {% else %}
-                    Sem Jogos
-                {% endif %}
-              </div>
+                          </ul>
+                    {% else %}
+                        Sem Jogos Realizados
+                    {% endif %}
+            </div>
+        </div>
     </div>
+
+    <div class="col s12 m4">
+        <div class="card hoverable">
+            <div class="card-content">
+                <span class="card-title">Jogos Anteriores</span>
+                    {% if jogos_anteriores.count > 0 %}
+                        <ul class="collection" style="border: none">
+                        {% for jogo in jogos_anteriores %}
+                            <li class="collection-item avatar">
+                              <img src="media/{{ jogo.adversario.escudo_adversario }}" alt="" class="circle">
+                              <span class="title">{{ jogo.adversario.nome }}</span>
+                              <p>{{ jogo.data }} <br>
+                              </p>
+                              <a href="{% url 'jogo' jogo.pk %}" class="secondary-content"><i class="material-icons">grade</i></a>
+                            </li>
+                        {% endfor %}
+                          </ul>
+                    {% else %}
+                        Sem Jogos Realizados
+                    {% endif %}
+            </div>
+        </div>
+    </div>
+
+    <div class="col s12 m4">
+        <div class="card hoverable">
+            <div class="card-content">
+                <span class="card-title">Jogos Anteriores</span>
+                    {% if jogos_anteriores.count > 0 %}
+                        <ul class="collection" style="border: none">
+                        {% for jogo in jogos_anteriores %}
+                            <li class="collection-item avatar">
+                              <img src="media/{{ jogo.adversario.escudo_adversario }}" alt="" class="circle">
+                              <span class="title">{{ jogo.adversario.nome }}</span>
+                              <p>{{ jogo.data }} <br>
+                              </p>
+                              <a href="{% url 'jogo' jogo.pk %}" class="secondary-content"><i class="material-icons">grade</i></a>
+                            </li>
+                        {% endfor %}
+                          </ul>
+                    {% else %}
+                        Sem Jogos Realizados
+                    {% endif %}
+            </div>
+        </div>
+    </div>
+
+</div>
 
 {% endblock %}
