--- a/templates/base.html
+++ b/templates/base.html
@@ -20,6 +20,7 @@
       <ul class="right hide-on-med-and-down">
         <li><a href="{% url 'jogos' %}">Jogos</a></li>
         <li><a href="{% url 'atletas' %}">Atletas</a></li>
+        <li><a href="{% url 'noticias' %}">Notícias</a></li>
       </ul>
     </div>
   </nav>
@@ -27,7 +28,7 @@
   <ul class="sidenav" id="mobile-demo">
     <li><a href="{% url 'jogos' %}">Jogos</a></li>
     <li><a href="{% url 'atletas' %}">Atletas</a></li>
-
+    <li><a href="{% url 'noticias' %}">Notícias</a></li>
   </ul>
 
 
