--- a/jogo/templates/jogo/jogo_detalhe.html
+++ b/jogo/templates/jogo/jogo_detalhe.html
@@ -1,7 +1,18 @@
 {% extends 'base.html' %}
+{% load static %}
 {% block title %}{{ jogo.data }}|Realmatismo Fc {% endblock %}
 {% block main %}
-    Local: {{ jogo.local }}
-    Data: {{ jogo.data }}
-    Adversário: {{ jogo.adversario.nome }}
+   <div class="row">
+        <div class="col s12 m12 l12">
+            <div class="card hoverable">
+                <div class="card-content">
+                    <span class="card-title">Detalhes do Jogo</span>
+                    <div class="row">
+                        <div>PLACAR</div>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+   </div>
 {% endblock %}
