--- a/jogo/templates/jogo/jogo_detalhe.html
+++ b/jogo/templates/jogo/jogo_detalhe.html
@@ -8,9 +8,22 @@
                 <div class="card-content">
                     <span class="card-title">Detalhes do Jogo</span>
                     <div class="row">
-                        <div>PLACAR</div>
-
+                        <div class="col s12 m12 l12">
+                            <h5 class="center-align">Placar</h5>
+                        </div>
                     </div>
+                    <div class="row">
+                        <div class="col s4 m4 l4">
+                            <h5 class="left-align">Real</h5>
+                        </div>
+                        <div class="col s4 m4 l4">
+                            <h5 class="left-align">0x0</h5>
+                        </div>
+                        <div class="col s4 m4 l4">
+                            <h5 class="left-align">{{ jogo.adversario.nome }}</h5>
+                        </div>
+                    </div>
+
                 </div>
             </div>
         </div>
