--- a/jogo/templates/jogo/noticia.html
+++ b/jogo/templates/jogo/noticia.html
@@ -1,10 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'base.html' %}
+{% block title %}Noticias|Realmatismo Fc {% endblock %}
+{% block main %}
 
-</body>
-</html>
+{% endblock %}
