--- a/jogo/templates/jogo/noticias.html
+++ b/jogo/templates/jogo/noticias.html
@@ -1,10 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
-</html>
+{% extends 'base.html' %}
+{% block title %}Noticias|Realmatismo Fc {% endblock %}
+{% block main %}
+    {% for noticia in noticias %}
+        {{ noticia.titulo }}
+    {% empty %}
+        Sem Noticia
+    {% endfor %}
+{% endblock %}
