--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,7 @@
   <nav>
     <div class="nav-wrapper">
       <a href="{% url 'home' %}" class="brand-logo">Realmatismo FC</a>
-      <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+      <a href="#" data-target="slide-out" class="sidenav-trigger"><i class="material-icons">menu</i></a>
       <ul class="right hide-on-med-and-down">
           <li><a href="{% url 'jogos' %}">Jogos</a></li>
           <li><a href="{% url 'atletas' %}">Atletas</a></li>
@@ -26,7 +26,7 @@
     </div>
   </nav>
 
-  <ul class="sidenav" id="mobile-demo">
+  <ul class="sidenav" id="slide-out">
       <li><a href="{% url 'jogos' %}">Jogos</a></li>
       <li><a href="{% url 'atletas' %}">Atletas</a></li>
       <li><a href="{% url 'noticias' %}">Notícias</a></li>
