--- a/templates/base.html
+++ b/templates/base.html
@@ -27,6 +27,14 @@
   </nav>
 
   <ul class="sidenav" id="slide-out">
+      <li><div class="user-view">
+      <div class="background">
+        <img src="../media/adversarios/real.png">
+      </div>
+      <a href="#user"><img class="circle" src="images/yuna.jpg"></a>
+      <a href="#name"><span class="white-text name">Realmatismo FC</span></a>
+      <a href="#email"><span class="white-text email">since 2015</span></a>
+    </div></li>
       <li><a href="{% url 'jogos' %}">Jogos</a></li>
       <li><a href="{% url 'atletas' %}">Atletas</a></li>
       <li><a href="{% url 'noticias' %}">Notícias</a></li>
@@ -37,8 +45,7 @@
 <div class="container-fluid">
     {% block main %}{% endblock %}
 </div>
-    <script
-  src="https://code.jquery.com/jquery-3.3.1.min.js"
+    <script  src="https://code.jquery.com/jquery-3.3.1.min.js"
   integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
   crossorigin="anonymous"></script>
     <script type="text/javascript" src="{% static 'js/materialize.min.js' %}"></script>
