--- a/templates/base.html
+++ b/templates/base.html
@@ -29,12 +29,13 @@
   <ul class="sidenav" id="slide-out">
       <li><div class="user-view">
       <div class="background">
-        <img src="../media/adversarios/real.png">
+
       </div>
-      <a href="#user"><img class="circle" src="images/yuna.jpg"></a>
-      <a href="#name"><span class="white-text name">Realmatismo FC</span></a>
-      <a href="#email"><span class="white-text email">since 2015</span></a>
+      <a href="#user"><img class="circle" src="../media/adversarios/real.png"></a>
+      <a href="#name"><span class="black-text name">Realmatismo FC</span></a>
+      <a href="#email"><span class="black-text email">since 2015</span></a>
     </div></li>
+      <li><a href="{% url 'home' %}"><i class="material-icons">home</i>Inicio</a></li>
       <li><a href="{% url 'jogos' %}">Jogos</a></li>
       <li><a href="{% url 'atletas' %}">Atletas</a></li>
       <li><a href="{% url 'noticias' %}">Notícias</a></li>
