--- a/jogo/templates/jogo/estatistica.html
+++ b/jogo/templates/jogo/estatistica.html
@@ -1,11 +1,21 @@
 {% extends 'base.html' %}
 {% block title %}Estatisticas|Realmatismo Fc {% endblock %}
 {% block main %}
+
     <div class="row">
         <div class="col s12 m4 l4">
             <div class="card hoverable">
                 <div class="card-content">
-                    <span class="card-title">Top Artilharia</span>
+
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col s12 m4 l4">
+            <div class="card hoverable">
+                <div class="card-content">
+                    <span class="card-title">Artilharia</span>
                     <table>
                         <thead>
                             <tr>
@@ -61,7 +71,7 @@
                         <thead>
                             <tr>
                                 <th>Nome</th>
-                                <th>Assis.</th>
+                                <th>Roubadas</th>
                             </tr>
                         </thead>
                          <tbody>
@@ -86,7 +96,7 @@
                         <thead>
                             <tr>
                                 <th>Nome</th>
-                                <th>Assis.</th>
+                                <th>Defesas.</th>
                             </tr>
                         </thead>
                          <tbody>
