--- a/jogo/templates/jogo/jogo_detalhe.html
+++ b/jogo/templates/jogo/jogo_detalhe.html
@@ -4,26 +4,21 @@
 {% block main %}
    <div class="row">
         <div class="col s12 m12 l12">
-            <div class="card hoverable">
+            <div class="card">
                 <div class="card-content">
-                    <span class="card-title">Detalhes do Jogo</span>
-                    <div class="row">
-                        <div class="col s12 m12 l12">
-                            <h5 class="center-align">Placar</h5>
-                        </div>
+                    <span class="card-title center-align">Realmatismo FC x {{ jogo.adversario.nome }}</span>
+                    <div class="col s12 m4">
+                         <h5 class="center">Placar</h5>
+                         <div class="icon-block">
+                             <img src="../media/adversarios/real.png" class="responsive-img circle" style="height: 50px; width: 50px">
+                         </div>
+                         <div class="icon-block">
+                            0x0
+                         </div>
+                         <div class="icon-block">
+                             <img src="../media/adversarios/real.png" class="responsive-img circle" style="height: 50px; width: 50px">
+                         </div>
                     </div>
-                    <div class="row">
-                        <div class="col s4 m4 l4">
-                            <h5 class="left-align">Real</h5>
-                        </div>
-                        <div class="col s4 m4 l4">
-                            <h5 class="left-align">0x0</h5>
-                        </div>
-                        <div class="col s4 m4 l4">
-                            <h5 class="left-align">{{ jogo.adversario.nome }}</h5>
-                        </div>
-                    </div>
-
                 </div>
             </div>
         </div>
