--- a/jogo/templates/jogo/jogo_detalhe.html
+++ b/jogo/templates/jogo/jogo_detalhe.html
@@ -6,19 +6,11 @@
         <div class="col s12 m12 l12">
             <div class="card">
                 <div class="card-content">
-                    <span class="card-title center-align">Realmatismo FC x {{ jogo.adversario.nome }}</span>
-                    <div class="col s12 m4">
-                         <h5 class="center">Placar</h5>
-                         <div class="icon-block">
-                             <img src="../media/adversarios/real.png" class="responsive-img circle" style="height: 50px; width: 50px">
-                         </div>
-                         <div class="icon-block">
-                            0x0
-                         </div>
-                         <div class="icon-block">
-                             <img src="../media/adversarios/real.png" class="responsive-img circle" style="height: 50px; width: 50px">
-                         </div>
-                    </div>
+                    <span class="card-title center-align">{{ jogo.adversario.nome }}</span>
+                         <h5 class="center">Placar</h5><br>
+                         <span class="left-align">Real</span>
+                         <span class="left-align">0X0</span>
+                         <span class="right-align">{{ jogo.adversario.nome }}</span>
                 </div>
             </div>
         </div>
