--- a/jogo/templates/jogo/jogo_detalhe.html
+++ b/jogo/templates/jogo/jogo_detalhe.html
@@ -8,9 +8,11 @@
                 <div class="card-content">
                     <span class="card-title center-align">{{ jogo.adversario.nome }}</span>
                          <h5 class="center">Placar</h5><br>
-                         <span class="left-align">Real</span>
-                         <span class="left-align">0X0</span>
-                         <span class="right-align">{{ jogo.adversario.nome }}</span>
+                         <p class="flow-text">
+                             <span class="left-align">Real</span>
+                             <span class="left-align">0X0</span>
+                             <span class="right-align">{{ jogo.adversario.nome }}</span>
+                         </p>
                 </div>
             </div>
         </div>
