--- a/jogo/templates/jogo/jogo_detalhe.html
+++ b/jogo/templates/jogo/jogo_detalhe.html
@@ -7,12 +7,56 @@
             <div class="card">
                 <div class="card-content">
                     <span class="card-title center-align">{{ jogo.adversario.nome }}</span>
-                         <h5 class="center">Placar</h5><br>
-                         <p class="flow-text">
-                             <span class="left-align">Real</span>
-                             <span class="left-align">0X0</span>
-                             <span class="right-align">{{ jogo.adversario.nome }}</span>
-                         </p>
+                         {% if jogo.placar_real is None %}
+                             Jogo não realizado
+                             {% else %}
+                             <h5 class="center">Dados do jogo</h5><br>
+                                <div class="row">
+                                    <div class="col s4">
+                                        <div class="center">
+                                            <span>Realmatismo FC</span>
+                                        </div>
+                                    </div>
+
+                                    <div class="col s1">
+                                         <div class="center">
+                                            <span>{{jogo.placar_real  }}</span>
+                                         </div>
+                                    </div>
+
+                                    <div class="col s2">
+                                      <div class="center">
+                                          <span> X </span>
+                                      </div>
+                                    </div>
+
+                                    <div class="col s1">
+                                         <div class="center">
+                                            <span>{{ jogo.placar_adversario }}</span>
+                                         </div>
+                                    </div>
+                                    <div class="col s4">
+                                         <div class="center">
+                                            <span>{{ jogo.adversario.nome }}</span>
+                                         </div>
+                                    </div>
+                                </div>
+
+                                <div class="row">
+                                    Local: {{ jogo.local }}
+                                </div>
+                                <div class="row">
+                                    Data: {{ jogo.data|date:"d M Y" }}
+                                </div>
+                                <div class="row">
+                                    <h5 class="center">Escalação: </h5><br>
+                                    {% for t in jogo.relacionados %}
+                                        {{ t.nome }}
+                                    {% endfor %}
+
+                                </div>
+                         {% endif %}
+
                 </div>
             </div>
         </div>
