--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,7 @@
 <body>
 
   <nav>
-    <div class="nav-wrapper">
+    <div class="nav-wrapper deep-orange">
       <a href="{% url 'home' %}" class="brand-logo">Realmatismo FC</a>
       <a href="#" data-target="slide-out" class="sidenav-trigger"><i class="material-icons">menu</i></a>
       <ul class="right hide-on-med-and-down">
@@ -30,7 +30,7 @@
 
   <ul class="sidenav" id="slide-out">
       <li><div class="user-view">
-      <div class="background">
+      <div class="background deep-orange">
 
       </div>
       <a href="#user"><img class="circle" src="../media/adversarios/real.png" width="1000px"></a>
@@ -49,7 +49,7 @@
     {% block main %}{% endblock %}
 </div>
 </main>
-  <footer class="page-footer">
+  <footer class="page-footer blue-grey lighten-3">
      {% include 'footer.html' %}
  </footer>
 
