--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,7 +1,6 @@
 
-  <div class="footer-copyright">
-    <div class="container">
-    © 2018 Todos os direitos para Diego Denzer versao 0.0.0.1
-    <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+  <div class="footer-copyright ">
+    <div class="container black-text text-darken-2">
+        © 2018 Todos os direitos reservados para Diego Denzer versao 0.2
     </div>
   </div>
