--- a/jogo/templates/jogo/atleta_detalhe.html
+++ b/jogo/templates/jogo/atleta_detalhe.html
@@ -1,5 +1,30 @@
 {% extends 'base.html' %}
 {% block title %}{{ atleta.nome }}|Realmatismo Fc {% endblock %}
 {% block main %}
-    {{ atleta.nome }}
+    <div class="row">
+    <div class="col s12 m4">
+        <div class="card hoverable">
+            <div class="card-content">
+                <span class="card-title">Perfil Atleta</span>
+                <div class="col s4 m2">
+                    <img src="media/{{ atleta.imagem }}" alt=""/>
+                </div>
+                <div class="col s8 m6">
+                    <div class="row">
+                        Nome: {{ atleta.nome }}
+                    </div>
+                    <div class="row">
+                        Sobrenome: {{ atleta.sobrenome }}
+                    </div>
+                    <div class="row">
+                        Apelido: {{ atleta.apelido }}
+                    </div>
+                    <div class="row">
+                        Número: {{ atleta.numero_camisa }}
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    </div>
 {% endblock %}
