--- a/jogo/templates/jogo/atletas.html
+++ b/jogo/templates/jogo/atletas.html
@@ -3,11 +3,10 @@
 {% block main %}
     <ul class="collection">
     {% for atleta in atletas %}
-
         <li class="collection-item avatar">
-            <img src="media/{{ jogo.adversario.escudo_adversario }}" alt="" class="circle">
-            <span class="title">{{ jogo.adversario.nome }}</span>
-            <a href="{% url 'atleta' atleta.pk %}"> {{ atleta.nome }} </a>
+            <img src="media/{{ atleta.imagem }}" alt="" class="circle">
+            <span class="title">{{ atleta.nome }}</span>
+            <a href="{% url 'atleta' atleta.pk %}"> Detalhes </a>
         </li>
     {% empty %}
         Sem atletas
