--- a/jogo/templates/jogo/atleta_detalhe.html
+++ b/jogo/templates/jogo/atleta_detalhe.html
@@ -2,29 +2,49 @@
 {% block title %}{{ atleta.nome }}|Realmatismo Fc {% endblock %}
 {% block main %}
     <div class="row">
-    <div class="col s12 m4">
-        <div class="card hoverable">
-            <div class="card-content">
-                <span class="card-title">Perfil Atleta</span>
-                <div class="col s4 m2">
-                    <img src="media/{{ atleta.imagem }}" alt=""/>
-                </div>
-                <div class="col s8 m6">
+        <div class="col s12 m12 l12">
+            <div class="card hoverable">
+                <div class="card-content">
+                    <span class="card-title center">Perfil Atleta</span>
                     <div class="row">
-                        Nome: {{ atleta.nome }}
-                    </div>
-                    <div class="row">
-                        Sobrenome: {{ atleta.sobrenome }}
-                    </div>
-                    <div class="row">
-                        Apelido: {{ atleta.apelido }}
-                    </div>
-                    <div class="row">
-                        Número: {{ atleta.numero_camisa }}
+                        <div class="col s4">
+                            <img src="../media/{{atleta.imagem}}" alt=""  style="height: 100%; width: 100%" />
+                        </div>
+                        <div class="col s8">
+                            Nome: {{ atleta.nome }}
+                            <br>
+                            Sobrenome: {{ atleta.sobrenome }}
+                            <br>
+                            Apelido: {{ atleta.apelido }}
+                            <br>
+                            Número: {% if atleta.numero_camisa is None %}
+                                        Sem número
+                                    {% else %}
+                                         {{ atleta.numero_camisa }}
+                                    {% endif %}
+                            <br>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+
+    <div class="row">
+        <div class="col s12 m12 l12">
+            <div class="card hoverable">
+                <div class="card-content">
+                    <span class="card-title center">Dados Atleta</span>
+                    Jogos Disputados: {{ atleta.jogos_realizados }}
+                    Gols: {{ atleta.gols }}
+                    Assistencias: {{ atleta.assistencia }}
+                    Defesas: {{ atleta.defesa }}
+                    Roubos: {{ atleta.roubo }}
+                    Minutos Jogados: {{ atleta.minutos }}
+                </div>
+            </div>
+        </div>
     </div>
+
+
 {% endblock %}
