--- a/jogo/templates/jogo/estatistica.html
+++ b/jogo/templates/jogo/estatistica.html
@@ -57,7 +57,7 @@
                             {% endfor %}
                          </tbody>
                     </table>
-                    <a href="#">Ver lista completa</a>
+                    <a href="{% url 'artilharia' %}">Ver lista completa</a>
                 </div>
             </div>
         </div>
@@ -85,7 +85,7 @@
                             {% endfor %}
                          </tbody>
                     </table>
-                    <a href="#">Ver lista completa</a>
+                    <a href="{% url 'assistencias' %}">Ver lista completa</a>
                 </div>
             </div>
         </div>
@@ -110,7 +110,7 @@
                             {% endfor %}
                          </tbody>
                     </table>
-                    <a href="#">Ver lista completa</a>
+                    <a href="{% url 'roubadas' %}">Ver lista completa</a>
                 </div>
             </div>
         </div>
@@ -124,7 +124,7 @@
                         <thead>
                             <tr>
                                 <th>Nome</th>
-                                <th>Defesas.</th>
+                                <th>Defesas</th>
                             </tr>
                         </thead>
                          <tbody>
@@ -136,7 +136,7 @@
                             {% endfor %}
                          </tbody>
                     </table>
-                    <a href="#">Ver lista completa</a>
+                    <a href="{% url 'defesas' %}">Ver lista completa</a>
                 </div>
             </div>
         </div>
@@ -162,7 +162,7 @@
                             {% endfor %}
                          </tbody>
                     </table>
-                    <a href="#">Ver lista completa</a>
+                    <a href="{% url 'jogos-jogados' %}">Ver lista completa</a>
                 </div>
             </div>
         </div>
@@ -187,7 +187,7 @@
                             {% endfor %}
                          </tbody>
                     </table>
-                    <a href="#">Ver lista completa</a>
+                    <a href="{% url 'minutos' %}">Ver lista completa</a>
                 </div>
             </div>
         </div>
