--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,6 +1,11 @@
-
-  <div class="footer-copyright ">
-    <div class="container black-text text-darken-2">
-        © 2018 Todos os direitos reservados para Diego Denzer versao 0.2
+<div class="container">
+    <div class="row">
+        <i class="fab fa-facebook-square"></i><br>
+        <i class="fab fa-instagram"></i>
     </div>
-  </div>
+</div>
+<div class="footer-copyright ">
+    <div class="container black-text text-darken-2">
+        © 2018 Todos os direitos reservados para Diego Denzer versao 0.3
+    </div>
+</div>
